--- a/index.html
+++ b/index.html
@@ -40,12 +40,9 @@
         var data = {};
         var outputText = document.getElementById("transText");
         var btn = document.getElementById("btn");
-        var user = "64a3ecc4-182b-47e9-a659-c580a7b5ca02";
-        var pass = "AnnGIdp6kCU7";
-
-        var translateAPI = "https://gateway.watsonplatform.net/language-translator/api/v2/translate"
+        var user = "username";
+        var pass = "password";
         var OWurl = "https://openwhisk.ng.bluemix.net/api/v1/web/Developer%20Advocate_dev/demo1/test"
-        //+ "?source=" + data.source + "&target=" + data.target + "&text=" +data.text;
 
           function translate() {
             data.source = document.getElementById("source").value;
