--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         var btn = document.getElementById("btn");
         var user = "username";
         var pass = "password";
-        var OWurl = "https://openwhisk.ng.bluemix.net/api/v1/web/Developer%20Advocate_dev/demo1/test"
+        var OWurl = "https://openwhisk.ng.bluemix.net/api/v1/web/{yournamespace}/demo1/test"
 
           function translate() {
             data.source = document.getElementById("source").value;
