--- a/index.html
+++ b/index.html
@@ -1,69 +1,117 @@
+<!--Created by Horea Porutiu-->
 <html>
   <head>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id = "background">
-      <center><h1>Watson Translates</h1></center>
+      <center><h1>Watson Translate</h1></center>
       <div id="left">
-        <center><label id="leftLabel" for="country">Input</label></center>
-          <select id="source" name="inputLang">
-            <option value="English">English</option>
-            <option value="Spanish">Spanish</option>
-            <option value="Arabic">Arabic</option>
-            <option value="Portuguese">Portuguese</option>
-            <option value="French">French</option>
-          </select>
+        <center><label id="leftLabel">Input</label></center>
+        <select onchange="langTest()" id="source" name="inputLang">
+          <option value="English">English</option>
+          <option value="Spanish">Spanish</option>
+          <option value="Arabic">Arabic</option>
+          <option value="Portuguese">Portuguese</option>
+          <option value="French">French</option>
+        </select>
       </div>
       <div id="right">
-        <center><label id="rightLabel" for="country">Output</label></center>
-          <select id="target" name="outputLang">
-            <option value="English">English</option>
-            <option value="Spanish">Spanish</option>
-            <option value="Arabic">Arabic</option>
-            <option value="Portuguese">Portuguese</option>
-            <option value="French">French</option>
-          </select>
+        <center><label id="rightLabel">Output</label></center>
+        <select id="target" name="outputLang">
+          <option value="Spanish">Spanish</option>
+          <option value="English">English</option>
+          <option value="Arabic">Arabic</option>
+          <option value="Portuguese">Portuguese</option>
+          <option value="French">French</option>
+        </select>
       </div>
-      <br style="clear:both;"/>
-      <center>
+      <div>
+        <center>
           <label for="text"></label>
           <input type = "text" placeholder="Translate Something..." id= "text" name="text" required>
           <form name ="login-form" action=javascript:translate()>
             <input type="submit" value="Translate">
           </form>
-        <div id ="transText"></div>
+        </center>
+      </div>
+      <center>
+        <div id ="transText" ></div>
+        <div id = "myLoader" class="loader"></div>
       </center>
     </div>
+    <!-- Start of JavaScript -->
+    <script>
+      var data = {};
+      var loader = document.getElementById("myLoader");
+      loader.hidden = true;
+      var targetLang = document.getElementById("target");
+      //Disable the user from picking English as output at the start of the program,
+      //since English is by default the input
+      targetLang.options[1].disabled = true;
 
-      <script>
-        var data = {};
-        var outputText = document.getElementById("transText");
-        var btn = document.getElementById("btn");
-        var user = "64a3ecc4-182b-47e9-a659-c580a7b5ca02";
-        var pass = "AnnGIdp6kCU7";
-
-        var translateAPI = "https://gateway.watsonplatform.net/language-translator/api/v2/translate"
-        var OWurl = "https://openwhisk.ng.bluemix.net/api/v1/web/Developer%20Advocate_dev/demo1/test"
-        //+ "?source=" + data.source + "&target=" + data.target + "&text=" +data.text;
-
-          function translate() {
-            data.source = document.getElementById("source").value;
-            data.target = document.getElementById("target").value;
-            data.text = document.getElementById("text").value;
-            var json = JSON.stringify(data);
-            console.log("json: " + json)
-
-            var ourRequest = new XMLHttpRequest();
-            ourRequest.open("POST", OWurl, true);
-            ourRequest.setRequestHeader('Content-type','application/json; charset=utf-8');
-            ourRequest.onload = function() {
-              if (ourRequest.readyState === ourRequest.DONE) {
-                outputText.innerHTML = ourRequest.responseText;
-              }
+      //This function modifies Watson language translation options based on what user picks.
+      //Watson can only do certain domains.
+      function langTest() {
+        var sourceLang = document.getElementById("source").value;
+        for (i = 0; i < targetLang.options.length; ++i) {
+          targetLang.value = "English";
+          targetLang.options[i].disabled = false;
+        }
+        if (sourceLang != "English") {
+          for (i = 0; i < targetLang.options.length; ++i) {
+            targetLang.value = "English";
+            //diable all options since Watson tranlslates from
+            //Arabic, Spanish, French and Portueguese to English only.
+            if (targetLang.options[i].value != "English") {
+              targetLang.options[i].disabled = true;
             }
-            ourRequest.send(json);
           }
-      </script>
+        }
+        //Don't let user try to translate from English to English..doesn't make sense.
+        else {
+          targetLang.value = "Spanish";
+          targetLang.options[1].disabled = true;
+        }
+      }
+      //variable that will hold our final translation
+      var outputText = document.getElementById("transText");
+      function translate() {
+        outputText.hidden = true;
+        loader.hidden = false;
+        //load up our data by extracting from text field and drop down menus
+        data.source = document.getElementById("source").value;
+        data.target = document.getElementById("target").value;
+        data.text = document.getElementById("text").value;
+
+        if (data.source == data.target) {
+          alert("please enter a different language")
+          loader.hidden = true;
+          return
+        }
+
+        //need to convert to string to be able to communicate over HTTP
+        var json = JSON.stringify(data);
+
+        var OpenWhiskUrl = "https://openwhisk.ng.bluemix.net/api/v1/web/Developer%20Advocate_dev/demo1/test"
+        //Our HttpRequest that will enable us to talk to Watson
+        var ourRequest = new XMLHttpRequest();
+
+        ourRequest.open("POST", OpenWhiskUrl, true);
+        ourRequest.setRequestHeader('Content-type','application/json');
+        ourRequest.onload = function() {
+          if (ourRequest.status == 400) {
+            outputText.innerHTML = "Error, check your network connection.";
+          }
+          else {
+            //set the response from Watson to a div
+            outputText.innerHTML = ourRequest.responseText;
+          }
+          outputText.hidden = false;
+          loader.hidden = true;
+        }
+        ourRequest.send(json);
+      }
+    </script>
   </body>
 </html>
