--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id = "background">
@@ -31,17 +32,24 @@
           <label for="text"></label>
           <input type = "text" placeholder="Translate Something..." id= "text" name="text" required>
           <form name ="login-form" action=javascript:translate()>
-            <input type="submit" value="Translate">
+            <input id = "translate" type="submit" value="Translate">
+          </form>
+          <form name ="login-form" action=javascript:startTranscribe()>
+             <input id = "record" type="submit" value="&#xf130;  Record">
           </form>
         </center>
-      </div>
       <center>
+        <br>
+        <br>
         <div id ="transText" ></div>
         <div id = "myLoader" class="loader"></div>
       </center>
     </div>
-    <!-- Start of JavaScript -->
+
+        <!-- Start of JavaScript -->
+    <script src="watson-speech.js"></script>
     <script>
+
       var data = {};
       var loader = document.getElementById("myLoader");
       loader.hidden = true;
@@ -104,6 +112,42 @@
         }
         ourRequest.send(json);
       }
+
+      function startTranscribe() {
+
+        var OpenWhiskUrl1 = "https://openwhisk.ng.bluemix.net/api/v1/web/Developer%20Advocate_dev/demo1/speechToText"
+        //Our HttpRequest that will enable us to talk to Watson
+        var getSpeechToTextToken = new XMLHttpRequest();
+        getSpeechToTextToken.open("GET", OpenWhiskUrl1, true);
+        //ourReq.setRequestHeader('Content-type','text/plain');
+        getSpeechToTextToken.onload = function() {
+          if (getSpeechToTextToken.status == 400) {
+            outputText.innerHTML = "Error, check your network connection.";
+          }
+          else {
+
+            var stream = WatsonSpeech.SpeechToText.recognizeMicrophone({
+              objectMode: true,
+              token: getSpeechToTextToken.responseText,
+              outputElement: '#text' // CSS selector or DOM Element
+            });
+
+            stream.on('error', function(err) {
+              console.log(err);
+            });
+
+            stream.on('data', function(data) {
+              console.log(data);
+              if(data.results[0] && data.results[0].final) {
+                stream.stop();
+                console.log('stop listening.');
+              }
+            });
+          }
+        }
+        getSpeechToTextToken.send();
+      }
+
     </script>
   </body>
 </html>
